cert-manager/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: app
  annotations:
    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
    kubernetes.io/ingress.class: gce
    # This enables HTTP connections from Internet clients
    kubernetes.io/ingress.allow-http: "true"
    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    kubernetes.io/ingress.global-static-ip-name: web-ip
  
spec:
  tls:
    - secretName: ssl
      hosts:
        - app.cloudgeeks.tk
  defaultBackend:
    service:
      name: web
      port:
        number: 80

 # kubectl get ingress -n app       

 # kubectl describe ingress/web-ingress -n app
